# browser-bookmarks

./: .gitignore  CMakeLists.txt  README.md
browserBookmarks/: CMakeLists.txt
browserBookmarks/bookmarks/: bookmarks_20250208_043942.html  bookmarks_20250210_202309.html
browserBookmarks/cmake/: paths.h.in
browserBookmarks/common/: types.hpp
browserBookmarks/include/: AwsS3.hpp  Formatter.hpp  Manager.hpp
browserBookmarks/include/Parser/: ChromiumParser.hpp  FirefoxParser.hpp  Parser.hpp
browserBookmarks/src/: AwsS3.cpp  AwsS3.hpp  Brave.hpp  ChromiumParser.hpp  FirefoxParser.hpp  Formatter.cpp  Formatter.hpp  HtmlFormatter.hpp  Manager.cpp  Manager.hpp  awsS3.hpp  downloader.hpp  main.cpp  writeOutput.hpp
browserBookmarks/src/Parser/: ChromiumParser.cpp  FirefoxParser.cpp  Parser.cpp
docs/: todo.md
include/Parser/: FirefoxParser.hpp
src/: Manager.cpp  main.cpp
